# gooroom-usb-control

./: meson.build
data/: gooroom-usbctl.desktop.in  meson.build
debian/: changelog  control  copyright
po/: POTFILES  ko.po  meson.build
resources/: gooroom-usbctl.gresource.xml  gooroom-usbctl.ui
src/: gooroom-usbctl-application.c  gooroom-usbctl-application.h  gooroom-usbctl-main.c  gooroom-usbctl-util.c  gooroom-usbctl-util.h  gooroom-usbctl-window.c  gooroom-usbctl-window.h
